Fix nav bar render issue on iOS

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -3,6 +3,10 @@
 @import 'slot-handle.css';
 @import 'slot-winner.css';
 
+body {
+  min-width: 670px;
+}
+
 .easter-egg .secret {
   position: relative;
   top: -60px;
